--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
             <div class="bg-Mossco-grey-background bg-opacity-0 duration-500 false-header h-24 hover:bg-opacity-75 origin-top sticky top-0 transform transition z-50 sm:h-28" data-pg-ia-hide>
                 <div data-empty-placeholder></div>
             </div>
-            <div class="-mt-28 container duration-500 h-24 mossco-header mx-auto px-0 sticky top-1 transform transition z-50 md:top-0 lg:top-2"> 
+            <div class="-mt-28 container duration-500 h-24 mossco-header mx-auto px-0 sticky top-1 transform transition z-50 md:top-0 lg:top-2 2xl:max-w-screen-xl"> 
                 <nav class="flex flex-wrap items-center justify-between p-4 sm:py-5 md:px-4 lg:py-0"> <a href="index.html"><img src="assets/images/logo/logo-white-teal.svg" class="drop-shadow-xl duration-500 h-9 ml-4 mossco-logo mr-auto scale-125 transform transition lg:h-9"></a>
                     <button class="hamburger-menu hover:text-white ml-auto py-2 rounded text-current md:mr-5 lg:hidden" data-name="nav-toggler" data-pg-ia='{"l":[{"name":"NabMenuToggler","trg":"click","a":{"l":[{"t":"^nav|[data-name=nav-menu]","l":[{"t":"set","p":0,"d":0,"l":{"class.remove":"hidden"}}]},{"t":"#gt# span:nth-of-type(1)","l":[{"t":"tween","p":0,"d":0.2,"l":{"rotationZ":45,"yPercent":300}}]},{"t":"#gt# span:nth-of-type(2)","l":[{"t":"tween","p":0,"d":0.2,"l":{"autoAlpha":0}}]},{"t":"#gt# span:nth-of-type(3)","l":[{"t":"tween","p":0,"d":0.2,"l":{"rotationZ":-45,"yPercent":-400}}]}]},"pdef":"true","trev":"true"}]}' data-pg-ia-apply="$nav [data-name=nav-toggler]" data-pg-ia-hide>
                         <span class="bg-primary-NORMAL block h-1 hover:bg-primary-LIGHT my-2 rounded ml-auto w-10 sm:w-12"></span>
                         <span class="bg-white block h-1 ml-auto my-2.5 rounded w-6 sm:w-8"></span>
                         <span class="bg-primary-NORMAL block h-1 hover: my-2.5 rounded ml-auto w-10 sm:w-12"></span>
-                    </button>
-                    <a href="#" class="bg-primary-NORMAL font-light hover:bg-primary-700 inline-block nav-btn-tablet-mobile px-5 py-2 rounded text-current text-primary-500 uppercase sm:hidden md:inline-block" data-pg-ia-hide>Book a Table</a>
+                    </button><a href="#" class="bg-primary-NORMAL font-light hover:bg-primary-700 inline-block nav-btn-tablet-mobile px-5 py-2 rounded text-current text-primary-500 uppercase sm:hidden md:inline-block" data-pg-ia-hide>Book a Table</a>
                     <script src="pgia/lib/pgia.js"></script>
                     <div class="bg-Mossco-grey-dark bg-opacity-95 hidden mx-auto pl-4 py-8 rounded space-y-2 text-center w-full md:max-w-md md:mr-0 lg:bg-opacity-0 lg:flex lg:max-w-full lg:space-x-4 lg:space-y-0 lg:text-left lg:w-auto" data-name="nav-menu" data-pg-ia-hide> 
                         <div class="flex flex-col font-medium text-gray-50 lg:flex-row lg:text-sm"> <a href="#home-our-brand" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Our Story</a> <a href="#home-menus" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Menus</a> <a href="#home-bar" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Bar &#38; Restaurant</a><a href="#home-gallery" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Gallery</a> <a href="#details-map" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Location</a> <a href="#home-newsletter" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Newsletter</a>
@@ -44,7 +43,7 @@
                     </div>
                 </div>
             </section>
-            <section class="border-primary-NORMAL container mx-auto" id="home-our-brand" data-pg-ia-scene='{"l":[{"name":"Mossco Our Brand","t":"h3","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"},{"name":"Mossco brand text","t":"p","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"}]}'>
+            <section class="border-primary-NORMAL container max-w-screen-xl mx-auto" id="home-our-brand" data-pg-ia-scene='{"l":[{"name":"Mossco Our Brand","t":"h3","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"},{"name":"Mossco brand text","t":"p","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"}]}'>
                 <div class="container mx-auto our-brand-bg pb-8 pt-16 px-4 md:pt-20">
                     <h3 class="capitalize font-medium mb-4 text-3xl text-center text-primary-NORMAL" data-pg-ia-hide><span class="uppercase"><span class="text-white lg:text-gray-200">Moss</span><span class="text-primary-NORMAL">co</span><span class="uppercase">&nbsp;our Brand</span></span></h3>
                     <p class="font-serif max-w-2xl mx-auto text-center text-white lg:text-gray-200" data-pg-ia-hide>The Mossco brand was inspired by its local connection to Moss Street in Dublin 2. &lsquo;Co&rsquo; encompasses the full offering available here &ndash; a full-service Bar, Kitchen &amp; outdoor terrace. Our aim to provide a casual and stylish offering.</p>
@@ -61,7 +60,7 @@
                     </div>
                 </div>
             </section>
-            <section class="container menus-bg mx-auto py-20 scroll-smooth md:py-16" id="home-menus" data-pgc-define="mossco-menus" data-pgc-define-name="Mossco menus" data-pgc-section="Mossco Components" data-pg-ia-scene='{"l":[{"name":"MENUS Header","t":"h3","a":"fadeInUp","p":"time","s":"30%","rev":"true"}]}'>
+            <section class="container max-w-screen-xl menus-bg mx-auto py-20 scroll-smooth md:py-16" id="home-menus" data-pgc-define="mossco-menus" data-pgc-define-name="Mossco menus" data-pgc-section="Mossco Components" data-pg-ia-scene='{"l":[{"name":"MENUS Header","t":"h3","a":"fadeInUp","p":"time","s":"30%","rev":"true"}]}'>
                 <div>
                     <h3 class="pb-4 text-3xl text-center text-primary-NORMAL uppercase md:pb-4" data-pg-ia-hide>Menus</h3>
                 </div>
@@ -81,11 +80,11 @@
                 </div>
             </section>             
             <section id="home-bar" data-pg-ia-scene='{"l":[{"t":"h3","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"},{"t":"p","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"}]}'>
-                <div class="border-Mossco-grey-dark border-t-4 container gap-3 grid grid-cols-1 mossco-bar-grid mx-auto md:grid-cols-4 md:grid-rows-2">
+                <div class="border-Mossco-grey-dark border-t-4 container gap-3 grid grid-cols-1 max-w-screen-xl mossco-bar-grid mx-auto md:grid-cols-4 md:grid-rows-2">
                     <div class="col-span-2 row-span-3 md:row-span-2">
                         <img src="assets/images/home/bar/travelodge-lounge-2-min.jpg">
                     </div>
-                    <div class="col-span-2 my-10 px-8 md:my-auto md:pl-2 md:pr-12">
+                    <div class="col-span-2 md:my-auto md:pl-2 md:pr-12 my-10 px-8 xl:pr-20">
                         <h3 class="capitalize font-medium text-3xl text-left text-primary-NORMAL md:pb-3" data-pg-ia-hide><span class="uppercase"><span class="text-white lg:text-gray-200">Moss</span><span class="text-primary-NORMAL">co</span><span class="uppercase">&nbsp;Bar</span></span></h3>
                         <p class="font-serif text-base text-gray-200 lg:text-gray-200" data-pg-ia-hide>Casual but stylish dining can be found within Mossco Restaurant - a perfect combination for our food and drink offering. With ample cosy seating and chic interiors, Mossco Restaurant is the place to relax and dine in Dublin 2.</p>
                     </div>
@@ -95,7 +94,7 @@
                 </div>
             </section>
             <section id="home-gallery" data-pgc-section="Mossco Components" data-pgc-define="mossco-gallery" data-pgc-define-name="Mossco Gallery" data-pg-ia-scene='{"l":[{"name":"MENUS Header","t":"h3","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%"},{"t":"#gt# div #gt# div:nth-of-type(2)","p":"time","s":"30%","rev":"true","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]}}]}'>
-                <div class="container mx-auto py-16 md:py-16">
+                <div class="container max-w-screen-xl mx-auto py-16 md:py-16">
                     <h3 class="pb-8 text-3xl text-center text-primary-NORMAL uppercase md:pb-10 md:pb-6" data-pg-ia-hide>Gallery</h3>
                     <div class="mossco-gallery-grid">
                         <div class="gallery-item-1"><a href="assets/images/home/gallery/MossCo-Cafe-min.jpg" data-fancybox="gallery"><img src="assets/images/home/gallery/MossCo-Cafe-min.jpg" class="h-full object-cover w-full" loading="lazy" sizes="100vw,
@@ -208,7 +207,7 @@
             </section>
         </main>
         <footer class="bg-primary-NORMAL font-light py-12 text-gray-500" data-pgc-define="mossco.footer" data-pgc-define-name="Mossco footer" data-pgc-section="Mossco Headers and Footers" data-pg-ia-scene='{"l":[{"name":"Mossco logo footer","t":".container #gt# div:nth-of-type(1) #gt# div:nth-of-type(1) #gt# img","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"x":"-100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"x":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"},{"t":".container #gt# div:nth-of-type(1) #gt# div:nth-of-type(2) #gt# img","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"x":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"x":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"}]}'> 
-            <div class="container mx-auto px-4"> 
+            <div class="container max-w-screen-xl mx-auto px-4"> 
                 <div class="footer-bg gap-2 grid grid-cols-1 pb-6 md:grid-cols-2">
                     <div class="col-span-1 grid place-items-center md:place-items-start">
                         <img src="assets/images/logo/Mosso%20black%20white.svg" class="pb-8 w-60 md:pb-0 md:w-56" data-pg-ia-hide>
