--- a/cafe-menu.html
+++ b/cafe-menu.html
@@ -19,15 +19,17 @@
             <div class="bg-Mossco-grey-background bg-opacity-0 duration-500 false-header h-24 origin-top sticky top-0 transform transition z-50 sm:h-28" data-pg-ia-hide>
                 <div data-empty-placeholder></div>
             </div>
-            <div class="-mt-28 container duration-500 h-24 lg:top-2 md:top-0 mossco-header mx-auto px-0 sticky top-1 transform transition z-50"> 
+            <div class="-mt-28 container duration-500 h-24 max-w-screen-xl mossco-header mx-auto px-0 sticky top-1 transform transition z-50 md:top-0 lg:top-2"> 
                 <nav class="flex flex-wrap items-center justify-between p-4 sm:py-5 md:px-4 lg:py-0"> <a href="index.html"><img src="assets/images/logo/logo-white-teal.svg" class="drop-shadow-xl duration-500 h-9 ml-4 mossco-logo mr-auto scale-125 transform transition lg:h-9"></a>
-                    <button class="hamburger-menu hover:text-white ml-auto py-2 rounded text-current md:mr-5 lg:hidden" data-name="nav-toggler" data-pg-ia='{"l":[{"name":"NabMenuToggler","trg":"click","a":{"l":[{"t":"^nav|[data-name=nav-menu]","l":[{"t":"set","p":0,"d":0,"l":{"class.remove":"hidden"}}]},{"t":"#gt# span:nth-of-type(1)","l":[{"t":"tween","p":0,"d":0.2,"l":{"rotationZ":45,"yPercent":300}}]},{"t":"#gt# span:nth-of-type(2)","l":[{"t":"tween","p":0,"d":0.2,"l":{"autoAlpha":0}}]},{"t":"#gt# span:nth-of-type(3)","l":[{"t":"tween","p":0,"d":0.2,"l":{"rotationZ":-45,"yPercent":-400}}]}]},"pdef":"true","trev":"true"}]}' data-pg-ia-apply="$nav [data-name=nav-toggler]"><span class="bg-primary-NORMAL block h-1 hover:bg-primary-LIGHT my-2 rounded ml-auto w-10 sm:w-12"></span><span class="bg-white block h-1 ml-auto my-2.5 rounded w-6 sm:w-8"></span><span class="bg-primary-NORMAL block h-1 hover: my-2.5 rounded ml-auto w-10 sm:w-12"></span>
-                    </button>
-                    <a href="#" class="bg-primary-NORMAL font-light hover:bg-primary-700 inline-block nav-btn-tablet-mobile px-5 py-2 rounded text-current text-primary-500 uppercase sm:hidden md:inline-block lg:hidden">Book a Table</a>
+                    <button class="hamburger-menu hover:text-white ml-auto py-2 rounded text-current md:mr-5 lg:hidden" data-name="nav-toggler" data-pg-ia='{"l":[{"name":"NabMenuToggler","trg":"click","a":{"l":[{"t":"^nav|[data-name=nav-menu]","l":[{"t":"set","p":0,"d":0,"l":{"class.remove":"hidden"}}]},{"t":"#gt# span:nth-of-type(1)","l":[{"t":"tween","p":0,"d":0.2,"l":{"rotationZ":45,"yPercent":300}}]},{"t":"#gt# span:nth-of-type(2)","l":[{"t":"tween","p":0,"d":0.2,"l":{"autoAlpha":0}}]},{"t":"#gt# span:nth-of-type(3)","l":[{"t":"tween","p":0,"d":0.2,"l":{"rotationZ":-45,"yPercent":-400}}]}]},"pdef":"true","trev":"true"}]}' data-pg-ia-apply="$nav [data-name=nav-toggler]">
+                        <span class="bg-primary-NORMAL block h-1 hover:bg-primary-LIGHT my-2 rounded ml-auto w-10 sm:w-12"></span>
+                        <span class="bg-white block h-1 ml-auto my-2.5 rounded w-6 sm:w-8"></span>
+                        <span class="bg-primary-NORMAL block h-1 hover: my-2.5 rounded ml-auto w-10 sm:w-12"></span>
+                    </button><a href="#" class="bg-primary-NORMAL font-light hover:bg-primary-700 inline-block nav-btn-tablet-mobile px-5 py-2 rounded text-current text-primary-500 uppercase sm:hidden md:inline-block lg:hidden">Book a Table</a>
                     <script src="pgia/lib/pgia.js"></script>
                     <div class="bg-Mossco-grey-dark bg-opacity-95 hidden mx-auto pl-4 py-8 rounded space-y-2 text-center w-full md:max-w-md md:mr-0 lg:bg-opacity-0 lg:flex lg:max-w-full lg:space-x-4 lg:space-y-0 lg:text-left lg:w-auto" data-name="nav-menu" data-pg-ia-hide> 
-                        <div class="flex flex-col font-medium font-sans text-gray-50 lg:flex-row lg:text-sm"> <a href="cafe-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">CAFÉ Menu</a> <a href="day-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Day Menu</a><a href="evening-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Evening Menu</a>
-                            <a href="#details-map" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4" target="#location-map">Location</a>
+                        <div class="flex flex-col font-medium font-sans text-gray-50 lg:flex-row lg:text-sm"> <a href="cafe-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">CAFÉ Menu</a> <a href="day-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Day Menu</a>
+                            <a href="evening-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Evening Menu</a><a href="#details-map" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4" target="#location-map">Location</a>
                         </div>                         <a href="#" class="active:bg-primary-DARK bg-primary-NORMAL duration-300 ease-out font-medium font-sans hover:bg-primary-LIGHT hover:ring hover:ring-primary-DARK inline-block px-5 py-2 rounded text-white transition uppercase">Book a Table</a> 
                     </div>                     
                 </nav>                 
@@ -39,7 +41,7 @@
                     <h1 class="flex font-medium font-sans lowercase text-5xl text-center translate-y-12 sm:text-6xl md:text-6xl lg:text-6xl xl:text-7xl 2xl:text-7xl">Café menu</h1>
                 </div>
             </section>
-            <section id="mossco-menu-col" class="container flex flex-wrap mx-auto px-4 py-14">
+            <section id="mossco-menu-col" class="container flex flex-wrap max-w-screen-xl mx-auto px-4 py-14">
                 <div class="gap-2 grid grid-cols-1 md:gap-10 md:grid-cols-2">
                     <div class="col-span-1 menu" data-pg-name="Menu col 1">
                         <h3 class="font-sans text-3xl text-primary-NORMAL uppercase">Café</h3>
@@ -169,10 +171,11 @@
                     </div>
                 </div>
             </section>
-            <section id="download-cafe-menu" class="bottom-0 flex items-center justify-center ml-auto px-4 rounded-md sticky xl:pr-2 2xl:pr-0" data-pg-ia-scene='{"l":[{"t":"#gt# div:nth-of-type(1) #gt# div:nth-of-type(2)","p":"time","a":{"l":[{"t":"","l":[{"t":"set","p":1.3,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":1.3,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]}}]}'>
+            <section id="download-cafe-menu" class="bottom-0 container flex items-center justify-center max-w-screen-xl ml-auto mx-auto px-4 rounded-md sticky xl:pr-2 2xl:pr-0" data-pg-ia-scene='{"l":[{"t":"#gt# div:nth-of-type(1) #gt# div:nth-of-type(2)","p":"time","a":{"l":[{"t":"","l":[{"t":"set","p":1.3,"d":0,"l":{"autoAlpha":0,"y":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":1.3,"d":0.5,"l":{"autoAlpha":1,"y":"0%"},"e":"Power1.easeOut"}]}]}}]}'>
                 <div class="container flex grid grid-cols-1 items-end justify-end px-0 sm:grid-cols-1 md:grid-cols-2 md:px-4 lg:grid-cols-3 lg:justify-center lg:px-4 xl:justify-center xl:px-5 2xl:justify-center 2xl:px-6">
                     <div class="col-span-2 hidden sm:col-span-1 sm:hidden md:col-span-1 md:flex lg:col-span-2" data-empty-placeholder></div>
-                    <div class="bg-Mossco-grey-dark bg-opacity-25 col-span-1 flex h-full items-center justify-center my-auto py-6 rounded-sm md:py-8" data-pg-ia-hide><a class="active:bg-primary-DARK active:border-primary-DARK bg-opacity-50 bg-primary-NORMAL border-2 border-primary-NORMAL border-solid bottom-0 cursor-pointer drop-shadow duration-300 ease-out flex font-sans hover:bg-primary-LIGHT hover:border-primary-LIGHT hover:drop-shadow-xl hover:ring hover:ring-primary-DARK hover:rounded-sm hover:text-white items-center justify-center px-8 py-2 rounded uppercase w-60 lg:font-medium 2xl:bg-primary-NORMAL">
+                    <div class="bg-Mossco-grey-dark bg-opacity-25 col-span-1 flex h-full items-center justify-center my-auto py-6 rounded-sm md:py-8" data-pg-ia-hide>
+                        <a class="active:bg-primary-DARK active:border-primary-DARK bg-opacity-50 bg-primary-NORMAL border-2 border-primary-NORMAL border-solid bottom-0 cursor-pointer drop-shadow duration-300 ease-out flex font-sans hover:bg-primary-LIGHT hover:border-primary-LIGHT hover:drop-shadow-xl hover:ring hover:ring-primary-DARK hover:rounded-sm hover:text-white items-center justify-center px-8 py-2 rounded uppercase w-60 lg:font-medium 2xl:bg-primary-NORMAL">
                         Download Menu   <svg class="fill-current h-6 ml-2 my-auto w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" fill="currentColor">
                                 <path d="M369.9 97.98L286.02 14.1c-9-9-21.2-14.1-33.89-14.1H47.99C21.5.1 0 21.6 0 48.09v415.92C0 490.5 21.5 512 47.99 512h288.02c26.49 0 47.99-21.5 47.99-47.99V131.97c0-12.69-5.1-24.99-14.1-33.99zM256.03 32.59c2.8.7 5.3 2.1 7.4 4.2l83.88 83.88c2.1 2.1 3.5 4.6 4.2 7.4h-95.48V32.59zm95.98 431.42c0 8.8-7.2 16-16 16H47.99c-8.8 0-16-7.2-16-16V48.09c0-8.8 7.2-16.09 16-16.09h176.04v104.07c0 13.3 10.7 23.93 24 23.93h103.98v304.01zM208 216c0-4.42-3.58-8-8-8h-16c-4.42 0-8 3.58-8 8v88.02h-52.66c-11 0-20.59 6.41-25 16.72-4.5 10.52-2.38 22.62 5.44 30.81l68.12 71.78c5.34 5.59 12.47 8.69 20.09 8.69s14.75-3.09 20.09-8.7l68.12-71.75c7.81-8.2 9.94-20.31 5.44-30.83-4.41-10.31-14-16.72-25-16.72H208V216zm42.84 120.02l-58.84 62-58.84-62h117.68z"/>
                             </svg> </a>
@@ -182,7 +185,7 @@
             </section>
         </main>
         <footer class="bg-primary-NORMAL font-light py-12 text-gray-500" data-pg-ia-scene='{"l":[{"name":"Mossco logo footer","t":".container #gt# div:nth-of-type(1) #gt# div:nth-of-type(1) #gt# img","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"x":"-100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"x":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"},{"t":".container #gt# div:nth-of-type(1) #gt# div:nth-of-type(2) #gt# img","a":{"l":[{"t":"","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0,"x":"100%"},"e":"Power1.easeOut"},{"t":"tween","p":0,"d":0.5,"l":{"autoAlpha":1,"x":"0%"},"e":"Power1.easeOut"}]}]},"p":"time","s":"30%","rev":"true"}]}' data-pgc="mossco.footer"> 
-            <div class="container mx-auto px-4"> 
+            <div class="container max-w-screen-xl mx-auto px-4"> 
                 <div class="footer-bg gap-2 grid grid-cols-1 pb-6 md:grid-cols-2">
                     <div class="col-span-1 grid place-items-center md:place-items-start">
                         <img src="assets/images/logo/Mosso%20black%20white.svg" class="pb-8 w-60 md:pb-0 md:w-56" data-pg-ia-hide>
