header.js loading issue

--- a/day-menu.html
+++ b/day-menu.html
@@ -318,6 +318,6 @@
                 <div data-empty-placeholder></div>
             </div>             
         </footer>
-        <script src="/assets/js/header.js" class="-translate-y-4 scale-125 scale-y-50 scale-y-75" data-pg-name="header.js"></script>         
+        <script src="assets/js/header.js" class="-translate-y-4 scale-125 scale-y-50 scale-y-75" data-pg-name="header.js"></script>         
     </body>     
 </html>
