--- a/day-menu.html
+++ b/day-menu.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css">
         <link href="assets/css/bg-images.css" rel="stylesheet" type="text/css">
         <script>/* Pinegrow Interactions, do not remove */ (function(){try{if(!document.documentElement.hasAttribute('data-pg-ia-disabled')) { window.pgia_small_mq=typeof pgia_small_mq=='string'?pgia_small_mq:'(max-width:767px)';window.pgia_large_mq=typeof pgia_large_mq=='string'?pgia_large_mq:'(min-width:768px)';var style = document.createElement('style');var pgcss='html:not(.pg-ia-no-preview) [data-pg-ia-hide=""] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show=""] {opacity:1;visibility:visible;display:block;}';if(document.documentElement.hasAttribute('data-pg-id') && document.documentElement.hasAttribute('data-pg-mobile')) {pgia_small_mq='(min-width:0)';pgia_large_mq='(min-width:99999px)'} pgcss+='@media ' + pgia_small_mq + '{ html:not(.pg-ia-no-preview) [data-pg-ia-hide="mobile"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="mobile"] {opacity:1;visibility:visible;display:block;}}';pgcss+='@media ' + pgia_large_mq + '{html:not(.pg-ia-no-preview) [data-pg-ia-hide="desktop"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="desktop"] {opacity:1;visibility:visible;display:block;}}';style.innerHTML=pgcss;document.querySelector('head').appendChild(style);}}catch(e){console&&console.log(e);}})()</script>
+        <script src="https://cdn.tailwindcss.com/"></script>
     </head>     
     <body data-pg-ia-scene="{&quot;l&quot;:[{&quot;t&quot;:&quot;this&quot;,&quot;a&quot;:&quot;fadeIn&quot;,&quot;p&quot;:&quot;time&quot;,&quot;s&quot;:&quot;0%&quot;}]}" data-pg-ia-hide>
         <header class="h-24 sm:h-28 sticky top-0 z-50" data-pg-ia-scene='{"l":[{"t":"#gt# div:nth-of-type(1)","a":{"l":[{"t":"","l":[{"t":"set","p":0.5,"d":0,"l":{"autoAlpha":0},"e":"Power1.easeOut"},{"t":"tween","p":0.5,"d":0.5,"l":{"autoAlpha":1},"e":"Power1.easeOut"}]}]},"p":"time","s":"0"},{"t":"nav #gt# div","a":{"l":[{"t":"","l":[{"t":"set","p":0.5,"d":0,"l":{"autoAlpha":0},"e":"Power1.easeOut"},{"t":"tween","p":0.5,"d":0.5,"l":{"autoAlpha":1},"e":"Power1.easeOut"}]}]},"p":"time","s":"0"},{"name":"burger menu","t":"button","a":{"l":[{"t":"","l":[{"t":"set","p":0.5,"d":0,"l":{"autoAlpha":0},"e":"Power1.easeOut"},{"t":"tween","p":0.5,"d":0.5,"l":{"autoAlpha":1},"e":"Power1.easeOut"}]}]},"p":"time","s":"0%"},{"name":"book table button tablet","t":"nav #gt# a:nth-of-type(2)","a":{"l":[{"t":"","l":[{"t":"set","p":0.5,"d":0,"l":{"autoAlpha":0},"e":"Power1.easeOut"},{"t":"tween","p":0.5,"d":0.5,"l":{"autoAlpha":1},"e":"Power1.easeOut"}]}]}}]}' data-pgc="mossco-navbar-menus">
@@ -26,7 +27,7 @@
                     <a href="#" class="bg-primary-NORMAL font-light hover:bg-primary-700 inline-block nav-btn-tablet-mobile px-5 py-2 rounded text-current text-primary-500 uppercase sm:hidden md:inline-block lg:hidden">Book a Table</a>
                     <script src="pgia/lib/pgia.js"></script>
                     <div class="bg-Mossco-grey-dark bg-opacity-95 hidden mx-auto pl-4 py-8 rounded space-y-2 text-center w-full md:max-w-md md:mr-0 lg:bg-opacity-0 lg:flex lg:max-w-full lg:space-x-4 lg:space-y-0 lg:text-left lg:w-auto" data-name="nav-menu" data-pg-ia-hide> 
-                        <div class="flex flex-col font-medium font-sans text-gray-50 lg:flex-row lg:text-sm"> <a href="cafe-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">CAFÉ Menu</a> <a href="day-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Day Menu</a><a href="evening-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Evening Menu</a>
+                        <div class="flex flex-col font-medium text-gray-50 lg:flex-row lg:text-sm"> <a href="cafe-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">CAFÉ Menu</a> <a href="day-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Day Menu</a><a href="evening-menu.html" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4">Evening Menu</a>
                             <a href="#details-map" class="hover:text-primary-LIGHT px-0 py-2 uppercase lg:px-4" target="#location-map">Location</a>
                         </div>                         <a href="#" class="active:bg-primary-DARK bg-primary-NORMAL duration-300 ease-out font-medium font-sans hover:bg-primary-LIGHT hover:ring hover:ring-primary-DARK inline-block px-5 py-2 rounded text-white transition uppercase">Book a Table</a> 
                     </div>                     
@@ -39,7 +40,7 @@
                     <h1 class="flex font-medium font-sans lowercase text-5xl text-center translate-y-12 sm:text-6xl md:text-6xl lg:text-6xl xl:text-7xl 2xl:text-7xl">day menu</h1>
                 </div>
             </section>
-            <section id="mossco-menu-col" class="container flex flex-wrap max-w-screen-xl mx-auto px-4 py-14">
+            <section id="mossco-menu-col" class="container flex flex-wrap font-sans max-w-screen-xl mx-auto px-4 py-14">
                 <div class="gap-2 grid grid-cols-1 md:gap-10 md:grid-cols-2">
                     <div class="col-span-1" data-pg-name="Menu col 1">
                         <h3 class="text-3xl text-primary-NORMAL">Day Menu</h3>
@@ -232,11 +233,14 @@
                         </div>
                         <div class="menu_item">
                             <dt>Enhance your salad</dt>
-                            <dd><i>- Grilled Garlic, lemon &amp; tarragon chicken skewers</i>
+                            <dd>
+                                <i>- Grilled Garlic, lemon &amp; tarragon chicken skewers</i>
                             </dd>
-                            <dd><i>- Grilled garlic &amp; chili black tiger prawn skewers</i>
+                            <dd>
+                                <i>- Grilled garlic &amp; chili black tiger prawn skewers</i>
                             </dd>
-                            <dd><i>- Smoky BBQ glazed haloumi skewers</i>
+                            <dd>
+                                <i>- Smoky BBQ glazed haloumi skewers</i>
                             </dd>
                             <p class="price">€2.00</p>
                         </div>
@@ -268,11 +272,10 @@
                     </div>
                 </div>
             </section>
-            <section id="download-cafe-menu" class="bottom-0 container flex items-center justify-center max-w-screen-xl ml-auto mx-auto px-4 rounded-md sticky xl:pr-2 2xl:pr-0" data-pg-ia-scene="{&quot;l&quot;:[{&quot;t&quot;:&quot;#gt# div:nth-of-type(1) #gt# div:nth-of-type(2)&quot;,&quot;p&quot;:&quot;time&quot;,&quot;a&quot;:{&quot;l&quot;:[{&quot;t&quot;:&quot;&quot;,&quot;l&quot;:[{&quot;t&quot;:&quot;set&quot;,&quot;p&quot;:1.3,&quot;d&quot;:0,&quot;l&quot;:{&quot;autoAlpha&quot;:0,&quot;y&quot;:&quot;100%&quot;},&quot;e&quot;:&quot;Power1.easeOut&quot;},{&quot;t&quot;:&quot;tween&quot;,&quot;p&quot;:1.3,&quot;d&quot;:0.5,&quot;l&quot;:{&quot;autoAlpha&quot;:1,&quot;y&quot;:&quot;0%&quot;},&quot;e&quot;:&quot;Power1.easeOut&quot;}]}]}}]}">
+            <section id="download-menu" class="bottom-0 container flex items-center justify-center max-w-screen-xl ml-auto mx-auto px-4 rounded-md sticky xl:pr-2 2xl:pr-0" data-pg-ia-scene="{&quot;l&quot;:[{&quot;t&quot;:&quot;#gt# div:nth-of-type(1) #gt# div:nth-of-type(2)&quot;,&quot;p&quot;:&quot;time&quot;,&quot;a&quot;:{&quot;l&quot;:[{&quot;t&quot;:&quot;&quot;,&quot;l&quot;:[{&quot;t&quot;:&quot;set&quot;,&quot;p&quot;:1.3,&quot;d&quot;:0,&quot;l&quot;:{&quot;autoAlpha&quot;:0,&quot;y&quot;:&quot;100%&quot;},&quot;e&quot;:&quot;Power1.easeOut&quot;},{&quot;t&quot;:&quot;tween&quot;,&quot;p&quot;:1.3,&quot;d&quot;:0.5,&quot;l&quot;:{&quot;autoAlpha&quot;:1,&quot;y&quot;:&quot;0%&quot;},&quot;e&quot;:&quot;Power1.easeOut&quot;}]}]}}]}">
                 <div class="container flex grid grid-cols-1 items-end justify-end px-0 sm:grid-cols-1 md:grid-cols-2 md:px-4 lg:grid-cols-3 lg:justify-center lg:px-4 xl:justify-center xl:px-5 2xl:justify-center 2xl:px-6">
                     <div class="col-span-2 hidden sm:col-span-1 sm:hidden md:col-span-1 md:flex lg:col-span-2" data-empty-placeholder></div>
-                    <div class="bg-Mossco-grey-dark bg-opacity-25 col-span-1 flex h-full items-center justify-center my-auto py-6 rounded-sm md:py-8" data-pg-ia-hide>
-                        <a class="active:bg-primary-DARK active:border-primary-DARK bg-opacity-50 bg-primary-NORMAL border-2 border-primary-NORMAL border-solid bottom-0 cursor-pointer drop-shadow duration-300 ease-out flex font-sans hover:bg-primary-LIGHT hover:border-primary-LIGHT hover:drop-shadow-xl hover:ring hover:ring-primary-DARK hover:rounded-sm hover:text-white items-center justify-center px-8 py-2 rounded uppercase w-60 lg:font-medium 2xl:bg-primary-NORMAL">
+                    <div class="bg-Mossco-grey-dark bg-opacity-25 col-span-1 flex h-full items-center justify-center my-auto py-6 rounded-sm md:py-8" data-pg-ia-hide><a class="active:bg-primary-DARK active:border-primary-DARK bg-opacity-50 bg-primary-NORMAL border-2 border-primary-NORMAL border-solid bottom-0 cursor-pointer drop-shadow duration-300 ease-out flex font-sans hover:bg-primary-LIGHT hover:border-primary-LIGHT hover:drop-shadow-xl hover:ring hover:ring-primary-DARK hover:rounded-sm hover:text-white items-center justify-center px-8 py-2 rounded uppercase w-60 lg:font-medium 2xl:bg-primary-NORMAL">
                         Download Menu   <svg class="fill-current h-6 ml-2 my-auto w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" fill="currentColor">
                                 <path d="M369.9 97.98L286.02 14.1c-9-9-21.2-14.1-33.89-14.1H47.99C21.5.1 0 21.6 0 48.09v415.92C0 490.5 21.5 512 47.99 512h288.02c26.49 0 47.99-21.5 47.99-47.99V131.97c0-12.69-5.1-24.99-14.1-33.99zM256.03 32.59c2.8.7 5.3 2.1 7.4 4.2l83.88 83.88c2.1 2.1 3.5 4.6 4.2 7.4h-95.48V32.59zm95.98 431.42c0 8.8-7.2 16-16 16H47.99c-8.8 0-16-7.2-16-16V48.09c0-8.8 7.2-16.09 16-16.09h176.04v104.07c0 13.3 10.7 23.93 24 23.93h103.98v304.01zM208 216c0-4.42-3.58-8-8-8h-16c-4.42 0-8 3.58-8 8v88.02h-52.66c-11 0-20.59 6.41-25 16.72-4.5 10.52-2.38 22.62 5.44 30.81l68.12 71.78c5.34 5.59 12.47 8.69 20.09 8.69s14.75-3.09 20.09-8.7l68.12-71.75c7.81-8.2 9.94-20.31 5.44-30.83-4.41-10.31-14-16.72-25-16.72H208V216zm42.84 120.02l-58.84 62-58.84-62h117.68z"/>
                             </svg> </a>
